--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,20 @@
  <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 
+<% if user_signed_in? %>
+<ul>
+	<li><%= link_to 'Post a link!', new_link_path %></li>
+	<li><%= link_to 'Settings', edit_user_registration_path %></li>
+	<li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %> </li>
+</ul>
+<% else %>
+<ul>
+	<li><%= link_to 'Sign up', new_user_registration_path %></li>
+	<li><%= link_to 'Login', new_user_session_path %></li>
+</ul>
+
+<% end %>
+
 <%= yield %>
 
 </body>
