--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,25 +7,48 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<header class="navbar navbar-default" role="navigation">
+    <div class="navbar-inner">
+      <div class="container">
+        <div id="logo" class="navbar-brand"><%= link_to "Linkage", root_path %></div>
+        <nav class="collapse navbar-collapse navbar-ex1-collapse">
 
- <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+
+
+
 
 <% if user_signed_in? %>
-<ul>
+<ul class="nav navbar-nav navbar-right">
 	<li><%= link_to 'Post a link!', new_link_path %></li>
 	<li><%= link_to 'Settings', edit_user_registration_path %></li>
 	<li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %> </li>
 </ul>
 <% else %>
-<ul>
+<ul class="nav navbar-nav navbar-right">
 	<li><%= link_to 'Sign up', new_user_registration_path %></li>
 	<li><%= link_to 'Login', new_user_session_path %></li>
 </ul>
 
 <% end %>
 
-<%= yield %>
 
+ </nav>
+      </div>
+    </div>
+  </header>
+
+<div id="main_content" class="container">
+
+<p>An app which uses Devise gem to let users make an easy to read list of links </p>
+
+
+ <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
+
+<div id="content" class="col-md-9 center-block">
+<%= yield %>
+</div>
+</div>
+</div>
 </body>
 </html>
