--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,4 +1,9 @@
-<p id="notice"><%= notice %></p>
+<div class="page-header">
+<h1><a href="<%= @link.url %>"><%= @link.title %></a><br>
+
+<small> by <%= @link.user.email %> </small></h1></div>
+</h1>
+</div>
 
 <p>
   <strong>Title:</strong>
@@ -10,5 +15,17 @@
   <%= @link.url %>
 </p>
 
-<%= link_to 'Edit', edit_link_path(@link) %> |
-<%= link_to 'Back', links_path %>
+<div class= "btn-group">
+<%= link_to 'To Website', @link.url, class: "btn btn-primary" %>
+
+</div>
+
+
+<% if @link.user == current_user %>
+
+<div class="btn-group">
+<%= link_to 'Edit', edit_link_path(@link), class: "btn btn-default" %> |
+<%= link_to 'Back', links_path, class: "btn btn-default" %>
+<%= link_to 'Wipe', @link, method: :delete, data: {confirm: 'Forrealz?' }, class: "btn btn-default" %>
+</div>
+<% end %>
