--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@link) do |f| %>
+<%= form_for@link, html: { multipart: true } do |f| %>
   <% if @link.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@link.errors.count, "error") %> prohibited this link from being saved:</h2>
@@ -19,7 +19,17 @@
     <%= f.label :url %><br>
     <%= f.text_field :url %>
   </div>
+  
+  <div class="field">
+    <%= f.label :image %><br>
+    <%= f.file_field :image %>
+  </div>
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
+  
+
+
 <% end %>
