--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,6 +1,7 @@
 <% @links.each do |link| %>
 <div class="Link row clearfix">
 <h2>
+<%= image_tag link.image.url(:medium) %><br>
   <%= link_to link.title, link %> <br>
   <small class="author"> Posted <%= time_ago_in_words(link.created_at) %> by <%= link.user.email %> </small>
 
