--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,15 @@
 	<li><%= link_to 'Post a link!', new_link_path %></li>
 	<li><%= link_to 'Settings', edit_user_registration_path %></li>
 	<li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %> </li>
+  <form class="navbar-form navbar-right" role="search">
+<div class="form-group">
+<input type="text" class="form-control" placeholder="Search">
+</div>
+<button type="submit" class="btn btn-default">Submit</button>
+  </form>
+
+
+
 </ul>
 <% else %>
 <ul class="nav navbar-nav navbar-right">
