--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -9,11 +9,18 @@
 				<div class="table-responsive">	
 							<table class="table">
 								<tbody>
-								<tr>
-									<td>	<h1>
-					<a href="<%= @link.url %>"><%= @link.title %></a>
-					<small> by <%= @link.user.email %> </small></h1>
-									</td><td>	<%= image_tag @link.image.url(:medium) %></td>
+									<tr>
+										<td>	<h1>
+											<a href="<%= @link.url %>"><%= @link.title %></a>
+												<small> by <%= @link.user.email %> </small></h1>
+													</td>
+														<td>	<%= image_tag @link.image.url(:medium) %></td>
+														<td class="star-rating" data-score= <%= @avg_review %> > </div> 
+														<em><%= "#{@reviews.length} reviews" %></em>
+
+
+														</td>
+
 
 								</tr>
 
@@ -52,7 +59,7 @@
 				<% else %>
 				<% @reviews.each do |review| %>
 				<div class="reviews">
-					<p><%= review.rating %></p>
+					<div class="star-rating" data-score= <%= review.rating %> > </div>
 					<p><%= review.comment %></p>
 
 				</div>
@@ -78,4 +85,22 @@
 <%= link_to 'Back', links_path, class: "btn btn-default" %>
 <%= link_to 'Wipe', @link, method: :delete, data: {confirm: 'Forrealz?' }, class: "btn btn-default" %>
 </div>
+
 <% end %>
+
+<script>
+	$('.star-rating').raty({
+		path: '/assets/',
+		readOnly: true,
+		score: function() {
+			return $(this).attr('data-score');
+
+		}
+	});
+
+	
+
+
+</script>
+
+
