--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,15 @@
 	<li><%= link_to 'Post a link!', new_link_path %></li>
 	<li><%= link_to 'Settings', edit_user_registration_path %></li>
 	<li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %> </li>
+  
+
+
+<%= form_tag search_links_path, method: :get, class: "navbar-form navbar-right", role: "search" do %>
+<p><%= text_field_tag :search, params[:search], class: "form-control" %> 
+  <%= submit_tag "Search", name: nil, class: "btn btn-default"%>
+</p>
+
+<% end %>
   <form class="navbar-form navbar-right" role="search">
 <div class="form-group">
 <input type="text" class="form-control" placeholder="Search">
